# chat_demo

GateServer/: CMakeLists.txt
GateServer/include/: RedisMgr.h  const.h
GateServer/res/: config.ini
GateServer/src/: ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  MysqlDao.cpp  RedisMgr.cpp
StatusServer/include/: RedisMgr.h  const.h
StatusServer/res/: config.ini
StatusServer/src/: ConfigMgr.cpp  MysqlDao.cpp  StatusServer.cpp
chat_client/: .gitignore  ChatView.cpp  applyfriend.cpp  applyfriendpage.cpp  chatpage.cpp  contactuserlist.cpp  listitembase.cpp  llfcchat.pro  logindialog.cpp  logindialog.ui  rc.qrc  registerdialog.cpp  statewidget.cpp  tcpmgr.cpp
